# reticulum-conformance

./: .gitignore  LIMITS.md  README.md  TESTS.html  TESTS.md  UPSTREAM_ISSUES.md  _rns_paths.py  bridge_client.py  conformance.py  conftest.py  requirements.txt
.github/workflows/: honesty.yml  integration.yml  microreticulum.yml  stress-multihop.yml  tests.yml
impls/kotlin/: build.gradle.kts  settings.gradle.kts
impls/kotlin/src/main/kotlin/: KotlinBridge.kt
impls/microreticulum/: CMakeLists.txt  README.md
impls/microreticulum/src/: bridge.cpp  bridge.h  main.cpp
impls/microreticulum/src/commands/: announce.cpp  channel.cpp  crypto.cpp  destination.cpp  framing.cpp  identity.cpp  ifac.cpp  link.cpp  packet.cpp  ratchet.cpp  resource.cpp  token.cpp  transport.cpp
impls/microreticulum/stubs/: MsgPack.h
impls/swift/: Package.swift
integration/: conftest.py  ifac_util.py  pipe_peer_local.py  pipe_session.py  test_announce_mode_pipe.py  test_announce_pipe.py  test_channel_window_pipe.py  test_ifac_pipe.py  test_path_discovery_pipe.py  test_path_request_pipe.py  three_node_session.py
reference/: behavioral_transport.py  bridge_server.py  lxmf_bridge.py  wire_tcp.py
tests/: test_announce.py  test_channel.py  test_channel_buffer_hooks.py  test_compression.py  test_config_parse_hooks.py  test_crypto.py  test_crypto_completeness.py  test_crypto_hooks.py  test_crypto_v2.py  test_destination.py  test_destination_completeness.py  test_destination_completeness_more.py  test_destination_hooks.py  test_discovery_receiver_hooks.py  test_discovery_resolver_completeness.py  test_discovery_resolver_hooks.py  test_discovery_resolver_v2.py  test_docs_normative_v2.py  test_framing.py  test_identity.py  test_identity_completeness.py  test_identity_hooks.py  test_identity_persistence.py  test_ifac.py  test_interfaces_completeness.py  test_interfaces_hooks.py  test_interfaces_v2.py  test_link.py  test_lxmf.py  test_packet.py  test_packet_completeness.py  test_packet_hooks.py  test_packet_v2.py  test_protocol_constants.py  test_ratchet.py  test_ratchet_lifecycle.py  test_resource.py  test_reticulum_config_completeness.py  test_reticulum_config_v2.py  test_token.py  (+1 more)
tests/behavioral/: conftest.py  packet_builders.py  test_announce_handler_dispatch_v2.py  test_blackhole_hooks.py  test_destination_v2.py  test_discovery_resolver_v2.py  test_hop_increment.py  test_local_client.py  test_packet_filter.py  test_path_replacement.py  test_replay_dedup.py  test_reticulum_config_v2.py  test_transport_announce_completeness.py  test_transport_announce_hooks.py  test_transport_announce_v2.py  test_transport_forwarding_completeness.py  test_transport_forwarding_hooks.py  test_transport_forwarding_v2.py  test_transport_routing.py  test_tunnels.py
tests/lxmf/: conftest.py  test_direct.py  test_opportunistic.py  test_propagation.py
tests/wire/: conftest.py  test_announce_burst_throttle.py  test_announce_cap_rate.py  test_announce_steady_state.py  test_announce_via_shared_master.py  test_buffer_stream.py  test_channel.py  test_channel_buffer2_hooks_wire.py  test_channel_buffer_completeness.py  test_channel_buffer_hooks_wire.py  test_channel_buffer_v2_wire.py  test_channel_flow.py  test_config_parse_hooks.py  test_crypto_completeness.py  test_destination_protocol.py  test_destination_v2.py  test_discovery_autoconnect_v2.py  test_docs_normative_v2_wire.py  test_drop_undecryptable.py  test_enforce_ratchets.py  test_group_destination.py  test_hub_routing_isolation.py  test_identity_recall.py  test_identity_v2.py  test_ifac_interop.py  test_interface_defaults_v2.py  test_interface_type_propagation.py  test_link2_hooks.py  test_link_auth_forgery.py  test_link_completeness.py  test_link_hooks.py  test_link_identify.py  test_link_lifecycle.py  test_link_lifecycle_v2.py  test_link_multihop.py  test_link_post_prove_invariant.py  test_link_protocol.py  test_link_request.py  test_link_via_shared_master.py  test_opportunistic_proof.py  (+20 more)
tools/: audit_bridge_delegation.py  check_conformance_decorated.py  generate_tests_html.py  generate_tests_md.py  kotlin_gap.py
